Opened 10 years ago
Closed 10 years ago
#4104 closed bug (fixed)
Occasional debugger call from Observable class destructor when Icon-O-Matic is quit
Reported by: | leavengood | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Icon-O-Matic | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
I have been using Icon-O-Matic a lot lately and I have been seeing periodically. Sometimes when IOM is quit, the crash dialog comes up. The stacktrace indicates the problem is from a debugger call:
228: DEBUGGER: Observable::~Observable() - 1 observers still watching, first: 12PathListItem debug_server: Thread 228 entered the debugger: Debugger call: `Observable::~Observable() - 1 observers still watching, first: 12PathListItem ' stack trace, current PC 0xffff0114 : (0x7ffee6fc) 0x28e127 _._10Observable + 0x83 (0x7ffee83c) 0x27481d _._10IconObject + 0x6d (0x7ffee87c) 0x25bd2e _._Q38BPrivate4Icon10VectorPath + 0xca (0x7ffeeabc) 0x29aa26 Release__13Referenceable + 0x42 (0x7ffeeaec) 0x2caa43 _._19UnassignPathCommand + 0x3b (0x7ffeeb1c) 0x2767ae Clear__12CommandStack + 0x8a (0x7ffeeb5c) 0x27422e MakeEmpty__8Documentb + 0x26 (0x7ffeeb8c) 0x2d7896 _MakeIconEmpty__13IconEditorApp + 0xaa (0x7ffeebcc) 0x2d6a54 MessageReceived__13IconEditorAppP8BMessage + 0x98 (0x7ffeecac) 0x3ee8eb DispatchMessage__7BLooperP8BMessageP8BHandler + 0x5b (0x7ffeecdc) 0x3e5025 DispatchMessage__12BApplicationP8BMessageP8BHandler + 0x405 (0x7ffeeecc) 0x3f0259 task_looper__7BLooper + 0x211 (0x7ffeef0c) 0x3e3791 Run__12BApplication + 0x75 (0x7ffeef4c) 0x2da09a main + 0x6e (0x7ffeef7c) 0x25478b _start + 0x5b (0x7ffeefac) 0x105b1a runtime_loader + 0x14a
So for whatever reason a PathListItem is not being removed from the Observer list before the Observable is destroyed.
Change History (3)
comment:1 by , 10 years ago
comment:2 by , 10 years ago
Hi korli,
That is good to see I'm not alone in seeing this. Unfortunately I only see it occasionally and I haven't yet figured out what a reproducable test case is (mostly because I'm just trying to use IOM to make icons and am not just testing it.) Do you have such a test case?
comment:3 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Should be have been fixed by hrev32707. See commit message for how to track possibly more reference counting problems. Please reopen if you see such a crash on quit again.
I could reproduce this bug on quit: