Fixed problem with the AddPathCommand. When ownership of the added paths is not transfered to the commmand, it needs to add references. If not more of such problems are lurking, it could already fix ticket #4104. Note that you can build Icon-O-Matic with referencable tracing turned on (generic/support/ Referenceable.cpp). The backtrace in #4104 would specifically hint at a problem with assigning paths to shape and then unassigning them. Assigning them didn't add the references that unassigning the paths removed.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32707 a95241bf-73f2-0310-859d-f6bbb57e9c96